doc: adiciona documentação do endpoint de criação de usuários
